# software_visite_sostegno

./: .gitattributes  .gitignore  MANUALE-UTENTE.docx  MANUALE-UTENTE.md  README.md  dati_turni.example.json  dati_turni.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: conftest.py  test_api_auth.py  test_api_error_paths.py  test_api_happy_path.py  test_api_new_endpoints.py  test_api_rate_limit.py  test_api_validation.py  test_backup.py  test_bugfix_audit.py  test_cli.py  test_cli_gaps.py  test_config.py  test_csv_export.py  test_csv_export_content.py  test_domain.py  test_explain_infeasible.py  test_gui_logic.py  test_i18n.py  test_improvements.py  test_integration.py  test_logging_cfg.py  test_new_features_detail.py  test_normalization.py  test_normalization_edge.py  test_notifications.py  test_notifications_complete.py  test_pdf_export.py  test_reporting.py  test_repository.py  test_repository_audit.py  test_repository_gaps.py  test_repository_load.py  test_repository_sanitize.py  test_repository_v2.py  test_scheduling.py  test_scheduling_vincoli.py  test_service.py  test_service_complete.py  test_service_v2.py  test_stats.py  (+2 more)
turni_visite/: __init__.py  api.py  backup.py  cli.py  config.py  csv_export.py  domain.py  gui_tk.py  i18n.py  logging_cfg.py  normalization.py  notifications.py  pdf_export.py  reporting.py  repository.py  scheduling.py  service.py  stats.py  weeks.py  whatsapp_export.py
turni_visite/gui/: __init__.py  tab_anagrafica.py  tab_avanzate.py  tab_calendario.py  tab_dashboard.py  tab_pianificazione.py  tab_storico.py  themes.py  widgets.py
