[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "turni-visite"
version = "0.2.0"
description = "Programma per l'assegnazione dei turni di visite di sostegno (Messina Ganzirri) con OR-Tools e PDF A4."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Congregazione Messina-Ganzirri" }
]
license = { text = "MIT" }

dependencies = [
  "ortools>=9.9,<10",
  "reportlab>=4.0,<5",
  "customtkinter>=5.2,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
api = [
  "flask>=3.0",
]

[project.scripts]
# Avvio CLI: comando 'turni' da terminale
turni     = "turni_visite.cli:main"
# Avvio GUI: comando 'turni-gui' da terminale
turni-gui = "turni_visite.gui_tk:main"
# Avvio API REST: comando 'turni-api' da terminale
turni-api = "turni_visite.api:main"

[tool.hatch.build.targets.wheel]
packages = ["turni_visite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
